Images for 2.8 inch screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "KEYDOWN",
         "mapgrid",
         "monofonto",
+        "PIPBOY",
         "pygame",
         "Pypboy",
         "Scanlines",
